--- a/Pages/edad de tu perro.html
+++ b/Pages/edad de tu perro.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Calcula la Edad de tu perro</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="../styles/edad de tu perro.css">
+	<link rel="stylesheet" type="text/css" href="../Styles/edad de tu perro.css">
 </head>
 <body>
 	<header class="header">
