--- a/Pages/Desafio2.html
+++ b/Pages/Desafio2.html
@@ -11,7 +11,7 @@
 			<a href="../index.html"><li>Tarea1</li></a>
 			<a href="edad de tu perro.html"><li>Edad de tu perro</li></a>
 			<a href="#"><li>Desafio 2</li></a>
-			<a href=""><li>Juego</li></a>
+			<a href="Portada juego.html"><li>Juego</li></a>
 		</ul>
 	</header>
 	<div class="container">
