--- a/Pages/edad de tu perro.html
+++ b/Pages/edad de tu perro.html
@@ -8,10 +8,10 @@
 <body>
 	<header class="header">
 		<ul>
-			<a href=""><li>Tarea1</li></a>
-			<a href="Pages/edad de tu perro.html"><li>Edad de tu perro</li></a>
+			<a href="../index.html"><li>Tarea1</li></a>
+			<a href="#"><li>Edad de tu perro</li></a>
 			<a href="Desafio2.html"><li>Desafio 2</li></a>
-			<a href=""><li>Juego</li></a>
+			<a href="Portada juego.html"><li>Juego</li></a>
 		</ul>
 	</header>
 	<div class="container">
