--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<a href=""><li>Tarea1</li></a>
 			<a href="Pages/edad de tu perro.html"><li>Edad de tu perro</li></a>
 			<a href="Pages/Desafio2.html"><li>Desafio 2</li></a>
-			<a href=""><li>Juego</li></a>
+			<a href="Pages/Portada juego.html"><li>Juego</li></a>
 		</ul>
 	</header>
 
