--- a/Pages/Portada juego.html
+++ b/Pages/Portada juego.html
@@ -19,7 +19,7 @@
 		<h2>Reglas</h2>
 		<h4>Las reglas son simples solo escoge el sentido de la flecha que te pide</h4>
 		<div id="juega">
-			<div id="jueg"><a href=""><h1>Jugar ahora</h1></a></div>
+			<div id="jueg"><a href="https://imbatman1012.github.io/Juego/Index.html"><h1>Jugar ahora</h1></a></div>
 		</div>
 	</div>
 	<footer>
